Added simple WebUI built with Vue.js; Minor refactoring for business logic related to addresses processing; Extended API to support frontend (auth providers info, current user profile);
